force-app/main/default/objects/Employee_Leave_Sheet__c/Employee_Leave_Sheet__c.object-meta.xml
<CustomObject>
    <label>Employee Leave Sheet</label>
    <nameField>
        <displayFormat>LS-{0000}</displayFormat>
        <label>Leave Sheet Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Employee Leave Sheets</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>