force-app/main/default/objects/Employee_Leave_Sheet__c/fields/Approver__c.field-meta.xml
<CustomField>
    <fullName>Approver__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Approver</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Employee_Leave_Sheets1</relationshipName>
    <type>Lookup</type>
</CustomField>