force-app/main/default/objects/Employee_Leave_Sheet__c/fields/Half_Day_Period__c.field-meta.xml
<CustomField>
    <fullName>Half_Day_Period__c</fullName>
    <label>Half Day Period</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>First Half</fullName>
            </value>
            <value>
                <fullName>Second Half</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>