force-app/main/default/objects/Employee_Leave_Sheet__c/fields/Is_Half_Day__c.field-meta.xml
<CustomField>
    <fullName>Is_Half_Day__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Half Day</label>
    <type>Checkbox</type>
</CustomField>