force-app/main/default/objects/Employee_Leave_Sheet__c/fields/Leave_Type__c.field-meta.xml
<CustomField>
    <fullName>Leave_Type__c</fullName>
    <label>Leave Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>CL</fullName>
            </value>
            <value>
                <fullName>SL</fullName>
            </value>
            <value>
                <fullName>LOP</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>