force-app/main/default/objects/Employee_Leave_Sheet__c/fields/Total_Days_Leave__c.field-meta.xml
<CustomField>
    <fullName>Total_Days_Leave__c</fullName>
    <formula>(End_Date__c  -  Start_Date__c ) + 1</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Days Leave</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>